preserve line breaks created in textarea

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       margin: 0 0 3px 0;
       font-size: 16px;
       line-height: 21px;
+      white-space: pre-wrap;
     }
     .date {
       font-size: 14px;
